@@ -19,7 +19,7 @@
         public string PackageConfigPath { get; set; }
         public string FilePath { get; set; }
 
-        public void Load()
+        public bool Load()
         {
             // an entry in package config maps to hint path under project reference node as follows:
             // Entry : <package id="CsvHelper" version="2.7.0" targetFramework="net45" />
@@ -29,7 +29,7 @@
 
             // map versioned library CsvHelper.2.7.0 to package entries in method
             if (!File.Exists(PackageConfigPath) || _packageConfigDocument != null)
-                return;
+                return false;
 
             _packageConfigDocument = new XmlDocument();
             _packageConfigDocument.Load(PackageConfigPath);
@@ -38,13 +38,15 @@
             if (packageNodes != null && packageNodes.Count > 0)
                 _packages = new Dictionary<string, XmlNode>();
             if (packageNodes == null)
-                return;
+                return false;
 
             foreach (var node in packageNodes.Cast<XmlNode>().Where(node => node.Attributes != null && node.Attributes[DevelopmentDependency] == null))
                 _packages.Add($"{node.Attributes[Id].Value}.{node.Attributes[Version].Value}", node);
 
             // when references are cleaned up later, store package nodes that match hint paths for references that are ok to keep
             // at the conclusion of cleanup, rewrite packages config with saved package nodes to keep
+
+            return true;
         }
 
         public void Remove(XmlNode referenceNode)
